# hust-cnki-research-mcp

./: .gitignore  .mcp.json  README.md  cnki_mcp_server.py  pyproject.toml
scripts/: inspect_paper_links.py  smoke_test.py
tests/: test_core.py  test_mcp_contract.py
